# MLabHub

./: .editorconfig  .env  .gitignore  Dockerfile  README.md  ai.py  all_links.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  downloaded_page_main.html  downloaded_page_people.html  downloaded_page_people.txt  driver.py  gen_email.py  gen_labels.py  index.html  insert_db.py  labels.json  labels_test.json  mcommunity.py  model.py  package-lock.json  package.json  prompt_main.txt  prompt_people.txt  pyproject.toml  readme.md  refined_label.txt  requirements.txt  ret.txt  scrape.py  tsconfig.json  update_labels.py  util.py  vite.config.ts  webpack.common.js  webpack.dev.js  webpack.prod.js
MLabHub/: __init__.py  __main__.py  config.py  db_model.py  model.py
amplify/: team-provider-info.json
eecs388proj4-main/: .gitignore  README.md  build.sh  build_helper.py  cookie  shellcode.py  sol0.py  sol1.py  sol2.py  sol3.py  sol4.py  sol5.py  target0.c  target6.c  test.sh
eecs485/p5-search-engine/search_server/: pyproject.toml
eecs485/p5-search-engine/search_server/search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
eecs485/p5-search-engine/search_server/search/static/css/: style.css
final_result/: 0.txt  1.txt  2.txt  3.txt  4.txt
prompt/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  7.txt
public/: manifest.json
result/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
script/: clear.sh  migrate.sh  rebuild_dev.sh
server/: .env  __init__.py  config.py  model.py
source/: cse_urls.txt  ece_urls.txt  me_urls.txt  (+2 more)
(+268 files in other folders)
